Update CSS to fix alignment in budget table in Ch. 17

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -93,6 +93,12 @@ footer{
 	vertical-align: top;
 }
 
+#chapter-17 table td:first-child tr > td:nth-of-type(3),
+#chapter-17 table td:first-child tr > td:nth-of-type(4),
+#chapter-17 table td:first-child tr > td:nth-of-type(5){
+	text-align: right;
+}
+
 #chapter-17 table tr:last-child > td tr td{
 	border-top: solid 1px;
 	padding-left: 5px;
@@ -107,5 +113,4 @@ footer{
 
 #chapter-17 thead:nth-of-type(2) th{
 	text-align: right;
-	width: 100%;
 }
